<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <packaging>atlassian-plugin</packaging>

    <parent>
        <groupId>com.adaptavist.pom</groupId>
        <artifactId>scriptrunner-bitbucket-standard</artifactId>
        <version>71</version>
        <relativePath/>
    </parent>

    <groupId>com.onresolve.scriptrunner.assets</groupId>
    <artifactId>sr-sample-plugin-bitbucket</artifactId>
    <version>1.1-SNAPSHOT</version>

    <organization>
        <name>Example Company</name>
        <url>http://www.example.com/</url>
    </organization>

    <name>Bitbucket Sample Plugin for ScriptRunner</name>
    <description>ScriptRunner for Bitbucket script plugin</description>

    <properties>
        <!-- Set your Bitbucket version here -->
        <bitbucket.version>8.9.7</bitbucket.version>
        <!-- Set logging levels for development here -->
        <logging.levels>com.onresolve;DEBUG, com.example;DEBUG</logging.levels>
    </properties>

    <dependencies>
        <!-- The parent pom adds some standard dependencies, but you can add additional ones here -->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>com.atlassian.maven.plugins</groupId>
                <artifactId>bitbucket-maven-plugin</artifactId>
                <version>${amps.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <productVersion>${bitbucket.version}</productVersion>
                    <productDataVersion>${bitbucket.version}</productDataVersion>
                    <enableQuickReload>true</enableQuickReload>
                    <!-- TODO: Verify if all these add-opens are needed for Bitbucket ${bitbucket.version} on Java 17 -->
                    <jvmArgs>-Xms1g -Xmx2g --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED</jvmArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <!-- This is required to find the parent pom and ScriptRunner dependencies -->
        <repository>
            <id>adaptavist-external</id>
            <url>https://nexus.adaptavist.net/content/repositories/external</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>fail</checksumPolicy>
            </releases>
        </repository>
        <!-- Add Atlassian Public repo as well -->
        <repository>
            <id>atlassian-public</id>
            <url>https://packages.atlassian.com/maven/repository/public</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>adaptavist-external</id>
            <url>https://nexus.adaptavist.net/content/repositories/external</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>fail</checksumPolicy>
            </releases>
        </pluginRepository>
        <pluginRepository>
            <id>atlassian-public</id>
            <url>https://packages.atlassian.com/maven/repository/public</url>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>never</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </snapshots>
            <releases>
                <enabled>true</enabled>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
        </pluginRepository>
    </pluginRepositories>
</project>
